# inventorymn-fe

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  config_template.toml
public/: tailwind_input.css
public/assets/css/: styles.css  tailwind.css  tailwind.css;
src/: app.rs  main.rs  router.rs
src/app/: App.rs  components.rs  pages.rs
src/app/components/: Header.rs
src/app/pages/: ComponentsPage.rs  LocationsPage.rs  MainPage.rs  ProjectsPage.rs  SharedComponentPage.rs  SingleComponentPage.rs  UserPage.rs  WelcomePage.rs  components.rs
src/app/pages/components/: ComponentCard.rs  CreateButton.rs  LocationList.rs  LocationListEntry.rs  LoginForm.rs  ProjectList.rs  SideNav.rs  StatusBox.rs  forms.rs
src/app/pages/components/forms/: ComponentForm.rs  LocationForm.rs  LoginForm.rs  ProjectForm.rs
src/router/: PageRouter.rs
