[package]
name = "inventorymn-fe"
version = "0.1.0"
authors = ["Kiril_Ivanov"]
edition = "2021"
description = "Inventory management App"
license = "GNU GPLv3"
repository = "https://github.com/kirildi/inventorymn-fe/"
# homepage = " "
# documentation = " "
# rust-version = "1.60.0"
# publish = false

[dependencies]
tokio = { version = "1.38.0", features = ["full"]}
axum = { version = "0.7.5", features = ["tokio"] } 
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
uuid = { version = "1.9.1", features = ["v4","serde"] }
dioxus = { version = "0.5.6", features = ["desktop", "router"] }
dioxus-router = "0.5.6"
manganis = "0.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
inventorymn-be = { version = "0.1.0", path = "../inventorymn-be"} 